--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.7.3",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "quill": "^2.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
