--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "markdown-it": "^14.1.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "pinyin": "^4.0.0-alpha.2",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
